Murphy System/outputs/workspace_output_1769205034_1861.txt
/workspace/main_script.js:763
            const fullCommand = args.length > 0 &&&&&&&& !args[0].startsWith('-') 
                                                  ^^

SyntaxError: Unexpected token '&&'
    at wrapSafe (node:internal/modules/cjs/loader:1464:18)
    at checkSyntax (node:internal/main/check_syntax:78:3)

Node.js v20.19.6
